LIMBAJE-FORMALE-AUTOMATE-COMPILATOARE/y.output
Grammar

    0 $accept: limbaj $end

    1 limbaj: blocGlobal blocFunctii blocMain

    2 blocGlobal: GLOBAL '{' '}'
    3           | GLOBAL '{' listaDeclarari '}'

    4 blocFunctii: FUNCTII '{' '}'
    5            | FUNCTII '{' listaFunctii '}'

    6 blocMain: MAIN '{' '}'
    7         | MAIN '{' blocCod '}'

    8 listaDeclarari: declarareVar ';'
    9               | listaDeclarari declarareVar ';'
   10               | constructieStruct ';'
   11               | listaDeclarari constructieStruct ';'
   12               | declarareStruct ';'
   13               | listaDeclarari declarareStruct ';'

   14 declarareVar: VARCONST TIP ID
   15             | VARCONST TIP ID ATRIBUIRE NUMAR
   16             | VARCONST TIP ID ATRIBUIRE ID
   17             | VARCONST TIP ID ATRIBUIRE SIR
   18             | VARCONST TIP ID ATRIBUIRE accesArray
   19             | VARCONST TIP ID ATRIBUIRE accesStruct
   20             | VARCONST TIP DIMENSIUNE ID
   21             | VARCONST TIP DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

   22 constructieStruct: STRUCT ID '{' listaDeclarari '}'

   23 declarareStruct: VARCONST '@' ID ID
   24                | VARCONST '@' ID ID ATRIBUIRE '{' listaValori '}'
   25                | VARCONST '@' ID DIMENSIUNE ID
   26                | VARCONST '@' ID DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

   27 listaValori: valoare
   28            | listaValori ',' valoare
   29            | '[' listaValori ']'
   30            | '{' listaValori '}'

   31 valoare: SIR
   32        | NUMAR
   33        | '-' NUMAR
   34        | ID
   35        | accesArray
   36        | accesStruct
   37        | apelFunctie
   38        | '$' expresie '$'

   39 expresie: ID
   40         | NUMAR
   41         | SIR
   42         | accesArray
   43         | accesStruct
   44         | apelFunctie
   45         | '(' expresie ')'
   46         | expresie ADD expresie
   47         | expresie SUB expresie
   48         | expresie MUL expresie
   49         | expresie DIV expresie
   50         | expresie EQ expresie
   51         | expresie GT expresie
   52         | expresie LT expresie
   53         | expresie GE expresie
   54         | expresie LE expresie
   55         | expresie AND expresie
   56         | expresie OR expresie
   57         | expresie XOR expresie
   58         | expresie NOT expresie

   59 listaFunctii: declarareFunctie
   60             | listaFunctii declarareFunctie

   61 declarareFunctie: FUNC TIP ID '(' ')' '{' blocCod RETURN valoare ';' '}'
   62                 | FUNC TIP ID '(' ')' '{' RETURN valoare ';' '}'
   63                 | FUNC TIP ID '(' declarareParam ')' '{' blocCod RETURN valoare ';' '}'
   64                 | FUNC TIP ID '(' declarareParam ')' '{' RETURN valoare ';' '}'

   65 apelFunctie: ID '(' ')'
   66            | ID '(' listaParam ')'

   67 listaParam: valoare
   68           | listaParam ',' valoare

   69 declarareParam: parametru
   70               | declarareParam ',' parametru

   71 parametru: VARCONST TIP ID
   72          | VARCONST TIP DIMENSIUNE ID

   73 blocCod: linieCod
   74        | blocCod linieCod

   75 linieCod: declarareVar ';'
   76         | constructieStruct ';'
   77         | declarareStruct ';'
   78         | asignare ';'
   79         | apelFunctie ';'
   80         | controlIfElse
   81         | controlWhile
   82         | controlFor

   83 asignare: ID ATRIBUIRE listaValori
   84         | accesArray ATRIBUIRE listaValori
   85         | accesStruct ATRIBUIRE listaValori

   86 accesArray: ID '[' valoare ']'

   87 accesStruct: ID SELECTOR ID
   88            | ID SELECTOR accesArray
   89            | ID SELECTOR accesStruct

   90 controlIfElse: IF '(' valoare ')' '{' blocCod '}' IF '(' valoare ')' ';'
   91              | IF '(' valoare ')' '{' blocCod '}' ELSE '{' blocCod '}'
   92              | IF '(' valoare ')' '{' blocCod '}' ELSE ';'
   93              | IF '(' valoare ')' ';' ELSE '{' blocCod '}'
   94              | IF '(' valoare ')' ';' ELSE ';'

   95 controlWhile: WHILE '(' valoare ')' '{' blocCod '}'
   96             | WHILE '(' valoare ')' ';'

   97 controlFor: FOR '(' FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' '{' blocCod '}' FOR '(' FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' ';'


Terminals, with rules where they appear

$end (0) 0
'$' (36) 38
'(' (40) 45 61 62 63 64 65 66 90 91 92 93 94 95 96 97
')' (41) 45 61 62 63 64 65 66 90 91 92 93 94 95 96 97
',' (44) 28 68 70 97
'-' (45) 33
';' (59) 8 9 10 11 12 13 61 62 63 64 75 76 77 78 79 90 92 93 94 96
    97
'@' (64) 23 24 25 26
'[' (91) 21 26 29 86
']' (93) 21 26 29 86
'{' (123) 2 3 4 5 6 7 22 24 30 61 62 63 64 90 91 92 93 95 97
'}' (125) 2 3 4 5 6 7 22 24 30 61 62 63 64 90 91 92 93 95 97
error (256)
ID (258) 14 15 16 17 18 19 20 21 22 23 24 25 26 34 39 61 62 63 64 65
    66 71 72 83 86 87 88 89
TIP (259) 14 15 16 17 18 19 20 21 61 62 63 64 71 72
VARCONST (260) 14 15 16 17 18 19 20 21 23 24 25 26 71 72
DIMENSIUNE (261) 20 21 25 26 72
ATRIBUIRE (262) 15 16 17 18 19 21 24 26 83 84 85 97
NUMAR (263) 15 32 33 40
SIR (264) 17 31 41
STRUCT (265) 22
SELECTOR (266) 87 88 89
GLOBAL (267) 2 3
FUNCTII (268) 4 5
MAIN (269) 6 7
IF (270) 90 91 92 93 94
ELSE (271) 91 92 93 94
WHILE (272) 95 96
FOR (273) 97
FOR_START (274) 97
FOR_STOP (275) 97
FOR_STEP (276) 97
FUNC (277) 61 62 63 64
RETURN (278) 61 62 63 64
ADD (279) 46
SUB (280) 47
DIV (281) 49
MUL (282) 48
AND (283) 55
OR (284) 56
XOR (285) 57
NOT (286) 58
EQ (287) 50
GT (288) 51
GE (289) 53
LT (290) 52
LE (291) 54


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
limbaj (49)
    on left: 1, on right: 0
blocGlobal (50)
    on left: 2 3, on right: 1
blocFunctii (51)
    on left: 4 5, on right: 1
blocMain (52)
    on left: 6 7, on right: 1
listaDeclarari (53)
    on left: 8 9 10 11 12 13, on right: 3 9 11 13 22
declarareVar (54)
    on left: 14 15 16 17 18 19 20 21, on right: 8 9 75
constructieStruct (55)
    on left: 22, on right: 10 11 76
declarareStruct (56)
    on left: 23 24 25 26, on right: 12 13 77
listaValori (57)
    on left: 27 28 29 30, on right: 21 24 26 28 29 30 83 84 85
valoare (58)
    on left: 31 32 33 34 35 36 37 38, on right: 27 28 61 62 63 64 67
    68 86 90 91 92 93 94 95 96 97
expresie (59)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58, on right: 38 45 46 47 48 49 50 51 52 53 54 55 56 57 58
listaFunctii (60)
    on left: 59 60, on right: 5 60
declarareFunctie (61)
    on left: 61 62 63 64, on right: 59 60
apelFunctie (62)
    on left: 65 66, on right: 37 44 79
listaParam (63)
    on left: 67 68, on right: 66 68
declarareParam (64)
    on left: 69 70, on right: 63 64 70
parametru (65)
    on left: 71 72, on right: 69 70
blocCod (66)
    on left: 73 74, on right: 7 61 63 74 90 91 92 93 95 97
linieCod (67)
    on left: 75 76 77 78 79 80 81 82, on right: 73 74
asignare (68)
    on left: 83 84 85, on right: 78
accesArray (69)
    on left: 86, on right: 18 35 42 84 88
accesStruct (70)
    on left: 87 88 89, on right: 19 36 43 85 89
controlIfElse (71)
    on left: 90 91 92 93 94, on right: 80
controlWhile (72)
    on left: 95 96, on right: 81
controlFor (73)
    on left: 97, on right: 82


State 0

    0 $accept: . limbaj $end

    GLOBAL  shift, and go to state 1

    limbaj      go to state 2
    blocGlobal  go to state 3


State 1

    2 blocGlobal: GLOBAL . '{' '}'
    3           | GLOBAL . '{' listaDeclarari '}'

    '{'  shift, and go to state 4


State 2

    0 $accept: limbaj . $end

    $end  shift, and go to state 5


State 3

    1 limbaj: blocGlobal . blocFunctii blocMain

    FUNCTII  shift, and go to state 6

    blocFunctii  go to state 7


State 4

    2 blocGlobal: GLOBAL '{' . '}'
    3           | GLOBAL '{' . listaDeclarari '}'

    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9
    '}'       shift, and go to state 10

    listaDeclarari     go to state 11
    declarareVar       go to state 12
    constructieStruct  go to state 13
    declarareStruct    go to state 14


State 5

    0 $accept: limbaj $end .

    $default  accept


State 6

    4 blocFunctii: FUNCTII . '{' '}'
    5            | FUNCTII . '{' listaFunctii '}'

    '{'  shift, and go to state 15


State 7

    1 limbaj: blocGlobal blocFunctii . blocMain

    MAIN  shift, and go to state 16

    blocMain  go to state 17


State 8

   14 declarareVar: VARCONST . TIP ID
   15             | VARCONST . TIP ID ATRIBUIRE NUMAR
   16             | VARCONST . TIP ID ATRIBUIRE ID
   17             | VARCONST . TIP ID ATRIBUIRE SIR
   18             | VARCONST . TIP ID ATRIBUIRE accesArray
   19             | VARCONST . TIP ID ATRIBUIRE accesStruct
   20             | VARCONST . TIP DIMENSIUNE ID
   21             | VARCONST . TIP DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'
   23 declarareStruct: VARCONST . '@' ID ID
   24                | VARCONST . '@' ID ID ATRIBUIRE '{' listaValori '}'
   25                | VARCONST . '@' ID DIMENSIUNE ID
   26                | VARCONST . '@' ID DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

    TIP  shift, and go to state 18
    '@'  shift, and go to state 19


State 9

   22 constructieStruct: STRUCT . ID '{' listaDeclarari '}'

    ID  shift, and go to state 20


State 10

    2 blocGlobal: GLOBAL '{' '}' .

    $default  reduce using rule 2 (blocGlobal)


State 11

    3 blocGlobal: GLOBAL '{' listaDeclarari . '}'
    9 listaDeclarari: listaDeclarari . declarareVar ';'
   11               | listaDeclarari . constructieStruct ';'
   13               | listaDeclarari . declarareStruct ';'

    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9
    '}'       shift, and go to state 21

    declarareVar       go to state 22
    constructieStruct  go to state 23
    declarareStruct    go to state 24


State 12

    8 listaDeclarari: declarareVar . ';'

    ';'  shift, and go to state 25


State 13

   10 listaDeclarari: constructieStruct . ';'

    ';'  shift, and go to state 26


State 14

   12 listaDeclarari: declarareStruct . ';'

    ';'  shift, and go to state 27


State 15

    4 blocFunctii: FUNCTII '{' . '}'
    5            | FUNCTII '{' . listaFunctii '}'

    FUNC  shift, and go to state 28
    '}'   shift, and go to state 29

    listaFunctii      go to state 30
    declarareFunctie  go to state 31


State 16

    6 blocMain: MAIN . '{' '}'
    7         | MAIN . '{' blocCod '}'

    '{'  shift, and go to state 32


State 17

    1 limbaj: blocGlobal blocFunctii blocMain .

    $default  reduce using rule 1 (limbaj)


State 18

   14 declarareVar: VARCONST TIP . ID
   15             | VARCONST TIP . ID ATRIBUIRE NUMAR
   16             | VARCONST TIP . ID ATRIBUIRE ID
   17             | VARCONST TIP . ID ATRIBUIRE SIR
   18             | VARCONST TIP . ID ATRIBUIRE accesArray
   19             | VARCONST TIP . ID ATRIBUIRE accesStruct
   20             | VARCONST TIP . DIMENSIUNE ID
   21             | VARCONST TIP . DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

    ID          shift, and go to state 33
    DIMENSIUNE  shift, and go to state 34


State 19

   23 declarareStruct: VARCONST '@' . ID ID
   24                | VARCONST '@' . ID ID ATRIBUIRE '{' listaValori '}'
   25                | VARCONST '@' . ID DIMENSIUNE ID
   26                | VARCONST '@' . ID DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

    ID  shift, and go to state 35


State 20

   22 constructieStruct: STRUCT ID . '{' listaDeclarari '}'

    '{'  shift, and go to state 36


State 21

    3 blocGlobal: GLOBAL '{' listaDeclarari '}' .

    $default  reduce using rule 3 (blocGlobal)


State 22

    9 listaDeclarari: listaDeclarari declarareVar . ';'

    ';'  shift, and go to state 37


State 23

   11 listaDeclarari: listaDeclarari constructieStruct . ';'

    ';'  shift, and go to state 38


State 24

   13 listaDeclarari: listaDeclarari declarareStruct . ';'

    ';'  shift, and go to state 39


State 25

    8 listaDeclarari: declarareVar ';' .

    $default  reduce using rule 8 (listaDeclarari)


State 26

   10 listaDeclarari: constructieStruct ';' .

    $default  reduce using rule 10 (listaDeclarari)


State 27

   12 listaDeclarari: declarareStruct ';' .

    $default  reduce using rule 12 (listaDeclarari)


State 28

   61 declarareFunctie: FUNC . TIP ID '(' ')' '{' blocCod RETURN valoare ';' '}'
   62                 | FUNC . TIP ID '(' ')' '{' RETURN valoare ';' '}'
   63                 | FUNC . TIP ID '(' declarareParam ')' '{' blocCod RETURN valoare ';' '}'
   64                 | FUNC . TIP ID '(' declarareParam ')' '{' RETURN valoare ';' '}'

    TIP  shift, and go to state 40


State 29

    4 blocFunctii: FUNCTII '{' '}' .

    $default  reduce using rule 4 (blocFunctii)


State 30

    5 blocFunctii: FUNCTII '{' listaFunctii . '}'
   60 listaFunctii: listaFunctii . declarareFunctie

    FUNC  shift, and go to state 28
    '}'   shift, and go to state 41

    declarareFunctie  go to state 42


State 31

   59 listaFunctii: declarareFunctie .

    $default  reduce using rule 59 (listaFunctii)


State 32

    6 blocMain: MAIN '{' . '}'
    7         | MAIN '{' . blocCod '}'

    ID        shift, and go to state 43
    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9
    IF        shift, and go to state 44
    WHILE     shift, and go to state 45
    FOR       shift, and go to state 46
    '}'       shift, and go to state 47

    declarareVar       go to state 48
    constructieStruct  go to state 49
    declarareStruct    go to state 50
    apelFunctie        go to state 51
    blocCod            go to state 52
    linieCod           go to state 53
    asignare           go to state 54
    accesArray         go to state 55
    accesStruct        go to state 56
    controlIfElse      go to state 57
    controlWhile       go to state 58
    controlFor         go to state 59


State 33

   14 declarareVar: VARCONST TIP ID .
   15             | VARCONST TIP ID . ATRIBUIRE NUMAR
   16             | VARCONST TIP ID . ATRIBUIRE ID
   17             | VARCONST TIP ID . ATRIBUIRE SIR
   18             | VARCONST TIP ID . ATRIBUIRE accesArray
   19             | VARCONST TIP ID . ATRIBUIRE accesStruct

    ATRIBUIRE  shift, and go to state 60

    $default  reduce using rule 14 (declarareVar)


State 34

   20 declarareVar: VARCONST TIP DIMENSIUNE . ID
   21             | VARCONST TIP DIMENSIUNE . ID ATRIBUIRE '[' listaValori ']'

    ID  shift, and go to state 61


State 35

   23 declarareStruct: VARCONST '@' ID . ID
   24                | VARCONST '@' ID . ID ATRIBUIRE '{' listaValori '}'
   25                | VARCONST '@' ID . DIMENSIUNE ID
   26                | VARCONST '@' ID . DIMENSIUNE ID ATRIBUIRE '[' listaValori ']'

    ID          shift, and go to state 62
    DIMENSIUNE  shift, and go to state 63


State 36

   22 constructieStruct: STRUCT ID '{' . listaDeclarari '}'

    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9

    listaDeclarari     go to state 64
    declarareVar       go to state 12
    constructieStruct  go to state 13
    declarareStruct    go to state 14


State 37

    9 listaDeclarari: listaDeclarari declarareVar ';' .

    $default  reduce using rule 9 (listaDeclarari)


State 38

   11 listaDeclarari: listaDeclarari constructieStruct ';' .

    $default  reduce using rule 11 (listaDeclarari)


State 39

   13 listaDeclarari: listaDeclarari declarareStruct ';' .

    $default  reduce using rule 13 (listaDeclarari)


State 40

   61 declarareFunctie: FUNC TIP . ID '(' ')' '{' blocCod RETURN valoare ';' '}'
   62                 | FUNC TIP . ID '(' ')' '{' RETURN valoare ';' '}'
   63                 | FUNC TIP . ID '(' declarareParam ')' '{' blocCod RETURN valoare ';' '}'
   64                 | FUNC TIP . ID '(' declarareParam ')' '{' RETURN valoare ';' '}'

    ID  shift, and go to state 65


State 41

    5 blocFunctii: FUNCTII '{' listaFunctii '}' .

    $default  reduce using rule 5 (blocFunctii)


State 42

   60 listaFunctii: listaFunctii declarareFunctie .

    $default  reduce using rule 60 (listaFunctii)


State 43

   65 apelFunctie: ID . '(' ')'
   66            | ID . '(' listaParam ')'
   83 asignare: ID . ATRIBUIRE listaValori
   86 accesArray: ID . '[' valoare ']'
   87 accesStruct: ID . SELECTOR ID
   88            | ID . SELECTOR accesArray
   89            | ID . SELECTOR accesStruct

    ATRIBUIRE  shift, and go to state 66
    SELECTOR   shift, and go to state 67
    '('        shift, and go to state 68
    '['        shift, and go to state 69


State 44

   90 controlIfElse: IF . '(' valoare ')' '{' blocCod '}' IF '(' valoare ')' ';'
   91              | IF . '(' valoare ')' '{' blocCod '}' ELSE '{' blocCod '}'
   92              | IF . '(' valoare ')' '{' blocCod '}' ELSE ';'
   93              | IF . '(' valoare ')' ';' ELSE '{' blocCod '}'
   94              | IF . '(' valoare ')' ';' ELSE ';'

    '('  shift, and go to state 70


State 45

   95 controlWhile: WHILE . '(' valoare ')' '{' blocCod '}'
   96             | WHILE . '(' valoare ')' ';'

    '('  shift, and go to state 71


State 46

   97 controlFor: FOR . '(' FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' '{' blocCod '}' FOR '(' FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' ';'

    '('  shift, and go to state 72


State 47

    6 blocMain: MAIN '{' '}' .

    $default  reduce using rule 6 (blocMain)


State 48

   75 linieCod: declarareVar . ';'

    ';'  shift, and go to state 73


State 49

   76 linieCod: constructieStruct . ';'

    ';'  shift, and go to state 74


State 50

   77 linieCod: declarareStruct . ';'

    ';'  shift, and go to state 75


State 51

   79 linieCod: apelFunctie . ';'

    ';'  shift, and go to state 76


State 52

    7 blocMain: MAIN '{' blocCod . '}'
   74 blocCod: blocCod . linieCod

    ID        shift, and go to state 43
    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9
    IF        shift, and go to state 44
    WHILE     shift, and go to state 45
    FOR       shift, and go to state 46
    '}'       shift, and go to state 77

    declarareVar       go to state 48
    constructieStruct  go to state 49
    declarareStruct    go to state 50
    apelFunctie        go to state 51
    linieCod           go to state 78
    asignare           go to state 54
    accesArray         go to state 55
    accesStruct        go to state 56
    controlIfElse      go to state 57
    controlWhile       go to state 58
    controlFor         go to state 59


State 53

   73 blocCod: linieCod .

    $default  reduce using rule 73 (blocCod)


State 54

   78 linieCod: asignare . ';'

    ';'  shift, and go to state 79


State 55

   84 asignare: accesArray . ATRIBUIRE listaValori

    ATRIBUIRE  shift, and go to state 80


State 56

   85 asignare: accesStruct . ATRIBUIRE listaValori

    ATRIBUIRE  shift, and go to state 81


State 57

   80 linieCod: controlIfElse .

    $default  reduce using rule 80 (linieCod)


State 58

   81 linieCod: controlWhile .

    $default  reduce using rule 81 (linieCod)


State 59

   82 linieCod: controlFor .

    $default  reduce using rule 82 (linieCod)


State 60

   15 declarareVar: VARCONST TIP ID ATRIBUIRE . NUMAR
   16             | VARCONST TIP ID ATRIBUIRE . ID
   17             | VARCONST TIP ID ATRIBUIRE . SIR
   18             | VARCONST TIP ID ATRIBUIRE . accesArray
   19             | VARCONST TIP ID ATRIBUIRE . accesStruct

    ID     shift, and go to state 82
    NUMAR  shift, and go to state 83
    SIR    shift, and go to state 84

    accesArray   go to state 85
    accesStruct  go to state 86


State 61

   20 declarareVar: VARCONST TIP DIMENSIUNE ID .
   21             | VARCONST TIP DIMENSIUNE ID . ATRIBUIRE '[' listaValori ']'

    ATRIBUIRE  shift, and go to state 87

    $default  reduce using rule 20 (declarareVar)


State 62

   23 declarareStruct: VARCONST '@' ID ID .
   24                | VARCONST '@' ID ID . ATRIBUIRE '{' listaValori '}'

    ATRIBUIRE  shift, and go to state 88

    $default  reduce using rule 23 (declarareStruct)


State 63

   25 declarareStruct: VARCONST '@' ID DIMENSIUNE . ID
   26                | VARCONST '@' ID DIMENSIUNE . ID ATRIBUIRE '[' listaValori ']'

    ID  shift, and go to state 89


State 64

    9 listaDeclarari: listaDeclarari . declarareVar ';'
   11               | listaDeclarari . constructieStruct ';'
   13               | listaDeclarari . declarareStruct ';'
   22 constructieStruct: STRUCT ID '{' listaDeclarari . '}'

    VARCONST  shift, and go to state 8
    STRUCT    shift, and go to state 9
    '}'       shift, and go to state 90

    declarareVar       go to state 22
    constructieStruct  go to state 23
    declarareStruct    go to state 24


State 65

   61 declarareFunctie: FUNC TIP ID . '(' ')' '{' blocCod RETURN valoare ';' '}'
   62                 | FUNC TIP ID . '(' ')' '{' RETURN valoare ';' '}'
   63                 | FUNC TIP ID . '(' declarareParam ')' '{' blocCod RETURN valoare ';' '}'
   64                 | FUNC TIP ID . '(' declarareParam ')' '{' RETURN valoare ';' '}'

    '('  shift, and go to state 91


State 66

   83 asignare: ID ATRIBUIRE . listaValori

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '['    shift, and go to state 95
    '{'    shift, and go to state 96
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    listaValori  go to state 99
    valoare      go to state 100
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 67

   87 accesStruct: ID SELECTOR . ID
   88            | ID SELECTOR . accesArray
   89            | ID SELECTOR . accesStruct

    ID  shift, and go to state 104

    accesArray   go to state 105
    accesStruct  go to state 106


State 68

   65 apelFunctie: ID '(' . ')'
   66            | ID '(' . listaParam ')'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    ')'    shift, and go to state 107
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    valoare      go to state 108
    apelFunctie  go to state 101
    listaParam   go to state 109
    accesArray   go to state 102
    accesStruct  go to state 103


State 69

   86 accesArray: ID '[' . valoare ']'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    valoare      go to state 110
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 70

   90 controlIfElse: IF '(' . valoare ')' '{' blocCod '}' IF '(' valoare ')' ';'
   91              | IF '(' . valoare ')' '{' blocCod '}' ELSE '{' blocCod '}'
   92              | IF '(' . valoare ')' '{' blocCod '}' ELSE ';'
   93              | IF '(' . valoare ')' ';' ELSE '{' blocCod '}'
   94              | IF '(' . valoare ')' ';' ELSE ';'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    valoare      go to state 111
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 71

   95 controlWhile: WHILE '(' . valoare ')' '{' blocCod '}'
   96             | WHILE '(' . valoare ')' ';'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    valoare      go to state 112
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 72

   97 controlFor: FOR '(' . FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' '{' blocCod '}' FOR '(' FOR_START ATRIBUIRE valoare ',' FOR_STOP ATRIBUIRE valoare ',' FOR_STEP ATRIBUIRE valoare ')' ';'

    FOR_START  shift, and go to state 113


State 73

   75 linieCod: declarareVar ';' .

    $default  reduce using rule 75 (linieCod)


State 74

   76 linieCod: constructieStruct ';' .

    $default  reduce using rule 76 (linieCod)


State 75

   77 linieCod: declarareStruct ';' .

    $default  reduce using rule 77 (linieCod)


State 76

   79 linieCod: apelFunctie ';' .

    $default  reduce using rule 79 (linieCod)


State 77

    7 blocMain: MAIN '{' blocCod '}' .

    $default  reduce using rule 7 (blocMain)


State 78

   74 blocCod: blocCod linieCod .

    $default  reduce using rule 74 (blocCod)


State 79

   78 linieCod: asignare ';' .

    $default  reduce using rule 78 (linieCod)


State 80

   84 asignare: accesArray ATRIBUIRE . listaValori

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '['    shift, and go to state 95
    '{'    shift, and go to state 96
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    listaValori  go to state 114
    valoare      go to state 100
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 81

   85 asignare: accesStruct ATRIBUIRE . listaValori

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '['    shift, and go to state 95
    '{'    shift, and go to state 96
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    listaValori  go to state 115
    valoare      go to state 100
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 82

   16 declarareVar: VARCONST TIP ID ATRIBUIRE ID .
   86 accesArray: ID . '[' valoare ']'
   87 accesStruct: ID . SELECTOR ID
   88            | ID . SELECTOR accesArray
   89            | ID . SELECTOR accesStruct

    SELECTOR  shift, and go to state 67
    '['       shift, and go to state 69

    $default  reduce using rule 16 (declarareVar)


State 83

   15 declarareVar: VARCONST TIP ID ATRIBUIRE NUMAR .

    $default  reduce using rule 15 (declarareVar)


State 84

   17 declarareVar: VARCONST TIP ID ATRIBUIRE SIR .

    $default  reduce using rule 17 (declarareVar)


State 85

   18 declarareVar: VARCONST TIP ID ATRIBUIRE accesArray .

    $default  reduce using rule 18 (declarareVar)


State 86

   19 declarareVar: VARCONST TIP ID ATRIBUIRE accesStruct .

    $default  reduce using rule 19 (declarareVar)


State 87

   21 declarareVar: VARCONST TIP DIMENSIUNE ID ATRIBUIRE . '[' listaValori ']'

    '['  shift, and go to state 116


State 88

   24 declarareStruct: VARCONST '@' ID ID ATRIBUIRE . '{' listaValori '}'

    '{'  shift, and go to state 117


State 89

   25 declarareStruct: VARCONST '@' ID DIMENSIUNE ID .
   26                | VARCONST '@' ID DIMENSIUNE ID . ATRIBUIRE '[' listaValori ']'

    ATRIBUIRE  shift, and go to state 118

    $default  reduce using rule 25 (declarareStruct)


State 90

   22 constructieStruct: STRUCT ID '{' listaDeclarari '}' .

    $default  reduce using rule 22 (constructieStruct)


State 91

   61 declarareFunctie: FUNC TIP ID '(' . ')' '{' blocCod RETURN valoare ';' '}'
   62                 | FUNC TIP ID '(' . ')' '{' RETURN valoare ';' '}'
   63                 | FUNC TIP ID '(' . declarareParam ')' '{' blocCod RETURN valoare ';' '}'
   64                 | FUNC TIP ID '(' . declarareParam ')' '{' RETURN valoare ';' '}'

    VARCONST  shift, and go to state 119
    ')'       shift, and go to state 120

    declarareParam  go to state 121
    parametru       go to state 122


State 92

   34 valoare: ID .
   65 apelFunctie: ID . '(' ')'
   66            | ID . '(' listaParam ')'
   86 accesArray: ID . '[' valoare ']'
   87 accesStruct: ID . SELECTOR ID
   88            | ID . SELECTOR accesArray
   89            | ID . SELECTOR accesStruct

    SELECTOR  shift, and go to state 67
    '('       shift, and go to state 68
    '['       shift, and go to state 69

    $default  reduce using rule 34 (valoare)


State 93

   32 valoare: NUMAR .

    $default  reduce using rule 32 (valoare)


State 94

   31 valoare: SIR .

    $default  reduce using rule 31 (valoare)


State 95

   29 listaValori: '[' . listaValori ']'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '['    shift, and go to state 95
    '{'    shift, and go to state 96
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    listaValori  go to state 123
    valoare      go to state 100
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 96

   30 listaValori: '{' . listaValori '}'

    ID     shift, and go to state 92
    NUMAR  shift, and go to state 93
    SIR    shift, and go to state 94
    '['    shift, and go to state 95
    '{'    shift, and go to state 96
    '-'    shift, and go to state 97
    '$'    shift, and go to state 98

    listaValori  go to state 124
    valoare      go to state 100
    apelFunctie  go to state 101
    accesArray   go to state 102
    accesStruct  go to state 103


State 97

   33 valoare: '-' . NUMAR

    NUMAR  shift, and go to state 125


State 98

   38 valoare: '$' . expresie '$'

    ID     shift, and go to state 126
    NUMAR  shift, and go to state 127
    SIR    shift, and go to state 128
    '('    shift, and go to state 129

    expresie     go to state 130
    apelFunctie  go to state 131
    accesArray   go to state 132
    accesStruct  go to state 133


State 99

   28 listaValori: listaValori . ',' valoare
   83 asignare: ID ATRIBUIRE listaValori .

    ','  shift, and go to state 134

    $default  reduce using rule 83 (asignare)


State 100

   27 listaValori: valoare .

    $default  reduce using rule 27 (listaValori)


State 101

   37 valoare: apelFunctie .

    $default  reduce using rule 37 (valoare)


State 102

   35 valoare: accesArray .

    $default  reduce using rule 35 (valoare)


State 103

   36 valoare: accesStruct .

    $default  reduce using rule 36 (valoare)


State 104

   86 accesArray: ID . '[' valoare ']'
   87 accesStruct: ID . SELECTOR ID
   87            | ID SELECTOR ID .
   88            | ID . SELECTOR accesArray
   89            | ID . SELECTOR accesStruct

    SELECTOR  shift, and go to state 67
    '['       shift, and go to state 69

    $default  reduce using rule 87 (accesStruct)


State 105

   88 accesStruct: ID SELECTOR accesArray .

    $default  reduce using rule 88 (accesStruct)


State 106

   89 accesStruct: ID SELECTOR accesStruct .

    $default  reduce using rule 89 (accesStruct)


State 107

   65 apelFunctie: ID '(' ')' .

    $default  reduce using rule 65 (apelFunctie)

